[package]
name = "async_coroutine"
description = "A coroutine implementation based on Rust's async/await syntax."
version = "0.1.0"
edition = "2024"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
repository = "https://github.com/jannik4/async_coroutine"
license = "MIT OR Apache-2.0"

[dependencies]
